added a movies page too and a footer and routing why not
yupppp

--- a/Selu383.SP25.P03.Web/index.html
+++ b/Selu383.SP25.P03.Web/index.html
@@ -8,7 +8,7 @@
       href="./src/assets/lionsdentheatreslogo.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lion's Den Theatres</title>
+    <title>Lion's Den Cinemas</title>
   </head>
   <body>
     <div id="root"></div>
